@@ -13,6 +13,7 @@ CMD-R runs all the specs in one file
 CMD-SHIFT-R runs an individual spec
 CMD-OPT-R runs any files or directories selected in the TextMate drawer
 
+* The rdoc formatter (--format rdoc) is gone. It was buggy and noone was using it.
 * Changed Spec::DSL::Behaviour to Spec::DSL::ExampleGroup
 * Changed Spec::DSL::SharedBehaviour to Spec::DSL::SharedExampleGroup
 * Applied [#14023] Small optimization for heavily proxied objects. (Patch from Ian Leitch)
